Saving bugs still present, moved the web db to same location as engine db